--- a/.config/keyd/default.conf
+++ b/.config/keyd/default.conf
@@ -18,14 +18,17 @@ w = /
 r = S-102nd
 i = G-4
 o = G-=
-; = G-6
-d = 6
+' = G-6
+d = C-delete
 a = 3
 h = C-left
 l = C-right
 j = down
 k = up	
 s = A-S-s
+f = 6
+g= 8
+;=right
 
 [meta_mac:C]
 
